--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Плавное появление контента</title>
+  <title>С днем рождения!!!</title>
+  <!-- Подключаем шрифт Dancing Script -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Marck+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,19 +19,27 @@
 
   <!-- Оверлей с кнопкой запуска -->
   <div class="overlay" id="overlay">
-    <button id="startBtn">Начать</button>
+    <button id="startBtn">Нажми, если ты гей</button>
   </div>
 
   <!-- Основной контент страницы -->
   <div class="content" id="content">
-    <h1>Happy Birthday!!!</h1>
-    <div class="photo-block">
-      <img src="photo.jpg" alt="Фото">
+    <h1 class="main-title">С днем рождения, любовь моя...</h1>
+    <div class="gif-container">
+      <img src="spinning.gif" alt="Spinning GIF" class="rotating-gif">
     </div>
     <div class="main-text">
-      <p>Здесь находится основной текст. Вы можете разместить здесь описание, поздравления или любую другую информацию.</p>
+      <p>С днем рождения тебя, жаным! Вот тебе и исполнился 21 год — совсем большая уже стала! Это значит, что теперь ты уже можешь бегать мне за стиками (шучу). Я желаю тебе и твоим родным здоровья, чтобы все пребывали в добром здравии. Желаю тебе меньше тревожиться из за разных мелочей, я уверен со временем это тебе придет. Ты большая умница и все делаешь в жизни правильно. Для своих лет ты уже знаешь корейский и английский и это большой плюс в построении карьеры тебе в будущем. Все это притом, что ты еще универ даже не закончила. По сравнению со мной ты уже многое сделала для своего возраста, поэтому ты умничка и так держать). На твоем поприще я буду поддерживать и всячески помогать тебе реализоваться(Алла жазса).
+        Знаешь узнавая тебя все больше и больше, я удивляюсь что мы с тобой многим схожи, практически идентичные личности))) Наши ценности и ожидания от жизни совпадают и мне это нравится. Как говорил Лев Николаевич: любовь это когда не один тянет за собой, а когда оба решают идти одной дорогой.
+        С того времени как ты уехала я совсем домосед стал и уже никуда выходить не хочется... Алла жазса, в скором времени будем вместе жить и души друг в друге не чаить, жду не дождусь этого момента. Я тебя очень сильно люблю и скучаю по тебе. Скучаю по нашим посиделкам в кофейнях, по нашим прогулкам за ручку, по твоей мииииилой улыбке, по твоему запаху. Хочется вот так лечь с тобой вместе и лежать по выходным. Поэтому возвращайся по скорее, я тебя очень сильно жду. Ты мое счастье, мой свет, моя поддержка и вдохновение. Спасибо тебе за то, что ты есть. Я люблю тебя!"
+        Твой Алишер...</p>
     </div>
+    <div class="hidden-photo" id="hidden-photo">
+      <img src="porsche.png" alt="Скрытое фото">
+    </div>
+    <button class="show-photo-btn" onclick="showPhoto()">Подарок</button>  
   </div>
+
 
   <script>
     // Обработчик клика по кнопке "Начать"
@@ -41,6 +53,11 @@
       //    console.log('Ошибка воспроизведения музыки:', error);
       // });
     });
+
+    function showPhoto() {
+      const photoBlock = document.getElementById('hidden-photo');
+      photoBlock.classList.toggle('visible');
+    }
   </script>
 </body>
 </html>
